; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_eth1394.c_ether1394_header_cache_update.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_eth1394.c_ether1394_header_cache_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hh_cache = type { i64 }
%struct.net_device = type { i32 }

@ETH1394_HLEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hh_cache*, %struct.net_device*, i8*)* @ether1394_header_cache_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ether1394_header_cache_update(%struct.hh_cache* %0, %struct.net_device* %1, i8* %2) #0 {
  %4 = alloca %struct.hh_cache*, align 8
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca i8*, align 8
  store %struct.hh_cache* %0, %struct.hh_cache** %4, align 8
  store %struct.net_device* %1, %struct.net_device** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load %struct.hh_cache*, %struct.hh_cache** %4, align 8
  %8 = getelementptr inbounds %struct.hh_cache, %struct.hh_cache* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = inttoptr i64 %9 to i32*
  %11 = getelementptr inbounds i32, i32* %10, i64 16
  %12 = load i32, i32* @ETH1394_HLEN, align 4
  %13 = sext i32 %12 to i64
  %14 = sub i64 0, %13
  %15 = getelementptr inbounds i32, i32* %11, i64 %14
  %16 = load i8*, i8** %6, align 8
  %17 = load %struct.net_device*, %struct.net_device** %5, align 8
  %18 = getelementptr inbounds %struct.net_device, %struct.net_device* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @memcpy(i32* %15, i8* %16, i32 %19)
  ret void
}

declare dso_local i32 @memcpy(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
